--- a/index.html
+++ b/index.html
@@ -1,14 +1,18 @@
 <html>
-    <head>
-        <title>Demo</title>
-    </head>
-    <link rel="stylesheet" href="css/style.css">
-    <body>
-        <ul>
-            <li><a href="index.html">Home</a></li>
-            <li><a href="SignUp/signup.html">SignUp</a></li>
-            <li><a href="Login/login.html">Login</a></li>
-        </ul>
-    </body>
-    <script src='js/main.js'></script>
+  <head>
+    <title>Form JS</title>
+  </head>
+  <link rel="stylesheet" href="css/style.css"/>
+  <body>
+    <ul>
+      <li><a href="index.html">Home</a></li>
+      <li><a href="SignUp/signup.html">SignUp</a></li>
+      <li><a href="Login/login.html">Login</a></li>
+    </ul>
+    <h1>Sign Up Now for demo</h1>
+    <a href="SignUp/signup.html">
+    <button type="submit" class="click">signup</button>
+</a>
+  </body>
+  <script src="js/main.js"></script>
 </html>
